--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
         "webpack-mix": "^2.0.2"
     },
     "dependencies": {
+        "bootstrap": "^4.1.3",
         "react": "^16.6.3",
-        "react-dom": "^16.6.3"
+        "react-dom": "^16.6.3",
+        "reactstrap": "^6.5.0"
     }
 }
