--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     },
     "dependencies": {
         "bootstrap": "^4.1.3",
+        "node-sass": "^4.13.0",
         "react": "^16.6.3",
         "react-dom": "^16.6.3",
         "reactstrap": "^6.5.0"
